[workspace]
members = ["game", "bundle", "util", "formats", "spu-adpcm", "pixmap", "qoit"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Rachel Knight <rachel@automorphi.city>"]

[profile.dev.build-override]
opt-level = 1

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true

#[profile.dev.package.lz4_flex]
#opt-level = 3

