[package]
version.workspace = true
edition.workspace = true
authors.workspace = true

name = "bundle"

[dependencies]
anyhow = "1"
bytemuck = { version = "1", features = ["derive", "extern_crate_std"] }
camino = "1"
formats = { path = "../formats" }
image = { version = "0.24", default-features = false, features = ["png"] }
lz4_flex = "0.9"
pack-rects = { git = "file:/home/sabi/projects/pack-rects", rev = "52f89f9" }
rkyv = "0.7"
thiserror = "1"
ultraviolet = { version = "0.9", features = ["int"] }
util = { path = "../util" }

