[package]
version.workspace = true
edition.workspace = true
authors.workspace = true

name = "bundle"

[dependencies]
anyhow = "1"
bytemuck = { version = "1", features = ["derive", "extern_crate_std"] }
camino = "1"
formats = { path = "../formats" }
image = { version = "0.24", default-features = false, features = ["png", "tga"] }
log = "0.4"
lz4_flex = "0.9"
pack-rects = { path = "/home/sabi/projects/pack-rects" }
#pack-rects = { git = "file:/home/sabi/projects/pack-rects", rev = "c79581c" }
pixmap = { path = "../pixmap" }
qoit = { path = "../../qoit" }
#rapid-qoi = "0.6"
rkyv = "0.7"
thiserror = "1"
trianglyph = { git = "file:/home/sabi/projects/trianglyph", rev = "73eb0bd" }
ttf-parser = "0.18"
ultraviolet = { version = "0.9", features = ["int"] }
util = { path = "../util" }

