[package]
version.workspace = true
edition.workspace = true
authors.workspace = true

name = "formula-rust"
build = "build.rs"
default-run = "formula-rust"

[dependencies]
anyhow = "1"
bundle = { path = "../bundle" }
bytemuck = "1"
camino = "1"
glutin = { version = "0.30", default-features = false, features = ["wayland", "egl"] }
glutin-winit = { version = "0.2", default-features = false, features = ["wayland", "egl"] }
image = { version = "0.24", default-features = false, features = ["png"] }
pack-rects = { git = "file:/home/sabi/projects/pack-rects", rev = "52f89f9" }
raw-window-handle = "0.5"
rkyv = "0.7"
ultraviolet = { version = "0.9", features = ["int"] }
winit = { version = "0.27", default-features = false, features = ["wayland"] }

[build-dependencies]
bundle = { path = "../bundle" }
camino = "1"
gl_generator = "0.14"
log = "0.4"
simplelog = "0.12"

